# render_rabbitmq

./: .gitignore  Procfile  consumer_raw.py  pyproject.toml  settings.py
